--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title:LITHIUM
-SEOTitle: 锂离子的博
+SEOTitle: 锂离子的博客
 header-img: img/post-bg-desk.jpg
 email: li857023489@gmail.com
 description: "Every failure is leading towards success."
